删除了kernel中的静态全站配置信息，改为obejct的GLobalSetting，删除了多余的启动器，其实并不需要那么多的启动器方法，合并了util的工具，删除了一些原先分门别类的异常，全部改为使用AlbianRuntimeException来简化编程，将部分原有的kernel类库的接口迁移到了loader，这样可以减少loader和kernel之间的依赖关系，只要kernel依赖loader即可，删除了部分内部数据结构的class-interface，全部使用class形式，并且删除了getter和setter，全部改为@data形式